<?xml version="1.0"?>
<package>
  <name>kinematics_toolbox</name>
  <version>0.0.1</version>
  <description>The kinematics_toolbox package</description>

  <maintainer email="mcconachie@cmu.edu">Dale McConachie</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
